tests/errors/semantic/blocking/ex5.py
# pylint: disable=missing-function-docstring, missing-module-docstring/
for i in a:
    pass
